changes in pathing

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <section id="direction_bar">
-        <a class="a_tags" href="pages/menu.html">Menu</a>
-        <a class="a_tags" href="pages/about-us.html">About us</a>
+        <a class="a_tags" href="Pages/menu.html">Menu</a>
+        <a class="a_tags" href="Pages/about-us.html">About us</a>
     </section>
 
     <section id="content">
