--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Menu - Okotoks Pizza</title>
+    <title>Okotoks Pizza Menu</title>
     <meta name="keywords" content="pizza, restaurant, okotoks, delivery, cheese, sauce, topping, deepdish, familyrestaurant, alberta, pizzaria">
-    <meta name="description" content="A family friendly pizzaria">
+    <meta name="description" content='Okotoks Pizza Menu'>
     <meta name="author" content="John Doe">
     <link rel="shortcut icon" href="../Images/favicon.svg" type="image/svg">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Raleway:300&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 
 <body>
     <section id="Grid-container">
-        <article id="Header-container">
+        <section id="Header-container">
             <div>
                 <a href="../Index.html"><img id="Logo-link" src="../Images/okotoks-pizza-logo.png" alt="Okotoks Pizza Logo"></a>
             </div>
@@ -26,122 +26,168 @@
             <div><a class="Phonenumber-class" id="Phonenumber-link" href="403-555-5555">Call us on 403-555-5555</a>
                 <p id="Phonenumber-text">Call us on 403-555-5555</p>
             </div>
-        </article>
-        <article id="Pizza-menu">
+        </section>
+        <section id="Pizza-menu">
             <div class="Menu-headers">Our Pizzas</div>
-            <div class="Menu-grid">
+            <article class="Menu-grid">
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="Margarita pizza">
-                    <p class="Pizza-header">MARGHERITA</p>
-                    <p class="Pizza-text">marinated tomato, pesto, bocconcini, mozza, pizza sauce, balsamic glaze</p>
+                    <p class="Menu-header">MARGHERITA</p>
+                    <span><p class="Menu-prices">$24</p></span>
+                    <p class="Menu-text">marinated tomato, pesto, bocconcini, mozza, pizza sauce, balsamic glaze</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-2.jpg" alt="True North Pizza">
-                    <p class="Pizza-header">TRUE NORTH</p>
-                    <p class="Pizza-text">double pepperoni, maple soaked, bacon, pizza sauce, mozza</p>
+                    <p class="Menu-header">TRUE NORTH</p>
+                    <span><p class="Menu-prices">$23</p></span>
+                    <p class="Menu-text">double pepperoni, maple soaked, bacon, pizza sauce, mozza</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-3.jpg" alt="D-lux Pizza">
-                    <p class="Pizza-header">D-LUX</p>
-                    <p class="Pizza-text">pepperoni, ham, mushroom, peppers, onion, olive, mozza, pizza sauce</p>
+                    <p class="Menu-header">D-LUX</p>
+                    <span><p class="Menu-prices">$22</p></span>
+                    <p class="Menu-text">pepperoni, ham, mushroom, peppers, onion, olive, mozza, pizza sauce</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-4.jpg" alt="4 Meat Pizza">
-                    <p class="Pizza-header">4 MEAT</p>
-                    <p class="Pizza-text">pepperoni, ham, Italian sausage, bacon, mozza, pizza sauce</p>
+                    <p class="Menu-header">4 MEAT</p>
+                    <span><p class="Menu-prices">$24</p></span>
+                    <p class="Menu-text">pepperoni, ham, Italian sausage, bacon, mozza, pizza sauce</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-2.jpg" alt="Pazzo Pizza">
-                    <p class="Pizza-header">PAZZO</p>
-                    <p class="Pizza-text">italian sausage, onion, jalepeno, fresh arugula, parmesan, chili oil, mozza, pizza sauce</p>
+                    <p class="Menu-header">PAZZO</p>
+                    <span><p class="Menu-prices">$22</p></span>
+                    <p class="Menu-text">italian sausage, onion, jalepeno, fresh arugula, parmesan, chili oil, mozza, pizza sauce</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-5.jpg" alt="">
-                    <p class="Pizza-header">FUN GUY</p>
-                    <p class="Pizza-text">wild mushrooms, garlic, rosemary, mozza, parmesan, truffle, fresh parsley</p>
+                    <p class="Menu-header">FUN GUY</p>
+                    <span><p class="Menu-prices">$24</p></span>
+                    <p class="Menu-text">Menu mushrooms, garlic, rosemary, mozza, parmesan, truffle, fresh parsley</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="">
-                    <p class="Pizza-header">DEWEY</p>
-                    <p class="Pizza-text">pesto base, mozza, mushroom, arugula, pancetta, onion, bocconcini, chili oil
+                    <p class="Menu-header">DEWEY</p>
+                    <span><p class="Menu-prices">$26</p></span>
+                    <p class="Menu-text">pesto base, mozza, mushroom, arugula, pancetta, onion, bocconcini, chili oil
                     </p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-3.jpg" alt="">
-                    <p class="Pizza-header">BUDDHA GOUDA</p>
-                    <p class="Pizza-text">pizza sauce, mozza, mushroom, onion, smoked gouda, black sesame seeds, chili oil
+                    <p class="Menu-header">BUDDHA GOUDA</p>
+                    <span><p class="Menu-prices">$21</p></span>
+                    <p class="Menu-text">pizza sauce, mozza, mushroom, onion, smoked gouda, black sesame seeds, chili oil
                     </p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="">
-                    <p class="Pizza-header">MEDI</p>
-                    <p class="Pizza-text">arugula, garlic, peppers, olive, bocconcini, pizza sauce</p>
+                    <p class="Menu-header">MEDI</p>
+                    <span><p class="Menu-prices">$24</p></span>
+                    <p class="Menu-text">arugula, garlic, peppers, olive, bocconcini, pizza sauce</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-5.jpg" alt="">
-                    <p class="Pizza-header">MANGO TANGO</p>
-                    <p class="Pizza-text">pizza sauce, mozza, mushroom, onion, smoked gouda, black sesame seeds, chili oil
+                    <p class="Menu-header">MANGO TANGO</p>
+                    <span><p class="Menu-prices">$22</p></span>
+                    <p class="Menu-text">pizza sauce, mozza, mushroom, onion, smoked gouda, black sesame seeds, chili oil
                     </p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-3.jpg" alt="">
-                    <p class="Pizza-header">OKOTOKS</p>
-                    <p class="Pizza-text">marinated tomato, pesto, bocconcini, mozza, pizza sauce, balsamic glaze</p>
+                    <p class="Menu-header">OKOTOKS</p>
+                    <span><p class="Menu-prices">$24</p></span>
+                    <p class="Menu-text">marinated tomato, pesto, bocconcini, mozza, pizza sauce, balsamic glaze</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="">
-                    <p class="Pizza-header">FAMILY</p>
-                    <p class="Pizza-text">pesto base, mozza, chicken, onion, marinated tomato, garlic</p>
+                    <p class="Menu-header">FAMILY</p>
+                    <span><p class="Menu-prices">$24</p></span>
+                    <p class="Menu-text">pesto base, mozza, chicken, onion, marinated tomato, garlic</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-4.jpg" alt="">
-                    <p class="Pizza-header">FLATBREAD</p>
-                    <p class="Pizza-text">wild mushrooms, garlic, rosemary, mozza, parmesan, truffle, fresh parsley</p>
+                    <p class="Menu-header">FLATBREAD</p>
+                    <span><p class="Menu-prices">$20</p></span>
+                    <p class="Menu-text">wild mushrooms, garlic, rosemary, mozza, parmesan, truffle, fresh parsley</p>
                 </div>
-            </div>
-            <div class="Menu-headers">Appys</div>
-            <div class="Menu-grid">
+            </article>
+            <div class="Menu-headers">Appetizers</div>
+            <article class="Menu-grid">
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">FRESH HERB SALAD</p>
-                    <p class="Pizza-text">Assorted Greens, Vine Tomatoes, Oranges, Cucumbers, Fresh Herb Vinaigrette, Shoots
+                    <p class="Menu-header">FRESH HERB SALAD</p>
+                    <div>
+                        <p class="Menu-prices">$14</p>
+                    </div>
+                    <p class="Menu-text">Assorted Greens, Vine Tomatoes, Oranges, Cucumbers, Fresh Herb Vinaigrette, Shoots
                     </p>
                 </div>
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">BASIL & BLACKBERRY SALAD</p>
-                    <p class="Pizza-text">Assorted Greens, Crimini Mushrooms, Mango, Roasted Red Bell Peppers, Basil & Blackberry Dressing, Shoots</p>
+                    <p class="Menu-header">BASIL & BLACKBERRY SALAD</p>
+                    <div>
+                        <p class="Menu-prices">$16</p>
+                    </div>
+                    <p class="Menu-text">Assorted Greens, Crimini Mushrooms, Mango, Roasted Red Bell Peppers, Basil & Blackberry Dressing, Shoots</p>
                 </div>
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">FIG & GOAT CHEESE SALAD</p>
-                    <p class="Pizza-text">Assorted Greens, Cucumbers, Vine Tomatoes, Red Onions, Green Pepper, Goat Cheese, Black Mission Fig Dressing, Shoots</p>
+                    <p class="Menu-header">FIG & GOAT CHEESE SALAD</p>
+                    <div>
+                        <p class="Menu-prices">$17</p>
+                    </div>
+                    <p class="Menu-text">Assorted Greens, Cucumbers, Vine Tomatoes, Red Onions, Green Pepper, Goat Cheese, Black Mission Fig Dressing, Shoots</p>
                 </div>
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">BRUSCHETTA</p>
-                    <p class="Pizza-text">Sea Salt & Herb Flatbread, Marinated Vine Tomatoes, Parmesan, Garlic, Onion, Basil, Balsamic Reduction GLUTEN WISE + 3.00</p>
+                    <p class="Menu-header">BRUSCHETTA</p>
+                    <div>
+                        <p class="Menu-prices">$12</p>
+                    </div>
+                    <p class="Menu-text">Sea Salt & Herb Flatbread, Marinated Vine Tomatoes, Parmesan, Garlic, Onion, Basil, Balsamic Reduction GLUTEN WISE + 3.00</p>
                 </div>
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">WINGS</p>
-                    <p class="Pizza-text">hot, honey garlic, bbq, red rock chili lime, salt and pepper, lemon herb, cajun
+                    <p class="Menu-header">WINGS</p>
+                    <div>
+                        <p class="Menu-prices">$19</p>
+                    </div>
+                    <p class="Menu-text">hot, honey garlic, bbq, red rock chili lime, salt and pepper, lemon herb, cajun
                     </p>
                 </div>
-            </div>
+            </article>
             <div class="Menu-headers">Drinks</div>
-            <div class="Menu-grid">
+            <article class="Menu-grid">
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">CRAFT BEERS</p>
-                    <p class="Pizza-text">ten peaks pale ale, railway avenue rye IPA, georgetown brown strong ale, mineside stout, New england style misty mountain hops IPA</p>
+                    <p class="Menu-header">CRAFT BEERS</p>
+                    <div>
+                        <p class="Menu-prices">14oz - $8</p>
+                    </div>
+                    <p class="Menu-text">ten peaks pale ale, railway avenue rye IPA, georgetown brown strong ale, mineside stout, New england style misty mountain hops IPA</p>
                 </div>
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">FEATURED CIDER</p>
-                    <p class="Pizza-text">somersby, big rock, </p>
+                    <p class="Menu-header">FEATURED CIDER</p>
+                    <Div>
+                        <p class="Menu-prices">$7</p>
+                    </div>
+                    <p class="Menu-text">somersby, big rock, </p>
                 </div>
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">CANNED POP</p>
-                    <p class="Pizza-text">coca cola, fanta, sprite, 7up, rootbeer, gingerale</p>
+                    <p class="Menu-header">CANNED POP</p>
+                    <div>
+                        <p class="Menu-prices">$3</p>
+                    </div>
+                    <p class="Menu-text">coca cola, fanta, sprite, 7up, rootbeer, gingerale</p>
                 </div>
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">FEATURED WINES</p>
-                    <p class="Pizza-text">malbec, shiraz, pinot noir, merlot</p>
+                    <p class="Menu-header">FEATURED WINES</p>
+                    <div>
+                        <p class="Menu-prices">6oz - $9 9oz - $12</p>
+                    </div>
+                    <p class="Menu-text">malbec, shiraz, pinot noir, merlot</p>
                 </div>
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">DOMESTIC BEERS</p>
-                    <p class="Pizza-text">molson canadian, big rock brewery, kokanee lager, drewrys, alexander keiths
+                    <p class="Menu-header">DOMESTIC BEERS</p>
+                    <div>
+                        <p class="Menu-prices">$6</p>
+                    </div>
+                    <p class="Menu-text">molson, big rock brewery, kokanee lager, drewrys, alexander keiths
                     </p>
                 </div>
                 <div Class="Menu-item-container">
-                    <p class="Pizza-header">KOMBUCHA</p>
-                    <p class="Pizza-text">happy belly kombucha, karma cultures, wild tea kombucha</p>
+                    <p class="Menu-header">KOMBUCHA</p>
+                    <div>
+                        <p class="Menu-prices">$8</p>
+                    </div>
+                    <p class="Menu-text">happy belly kombucha, karma cultures, wild tea kombucha</p>
                 </div>
+            </article>
             </div>
-            </div>
-        </article>
-        <article id="Footer-container">
+        </section>
+        <section id="Footer-container">
             <div id="Left-footer-column">
                 <p>© Okotoks Pizza - 2019</p>
 
@@ -150,7 +196,7 @@
                 <p>Open 7 days a week 2pm to 10pm </p>
                 <p>100 Milligan dr, Okotoks</p>
                 <p>403-555-5555</p>
-        </article>
+        </section>
     </section>
 
 </body>
