--- a/index.html
+++ b/index.html
@@ -1,46 +1,61 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <Title>Okotoks Pizza</Title>
-    <link rel="stylesheet" href="style.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="pizza, restaurant, okotoks, delivery, cheese, sauce, topping, familyrestaurant, alberta, pizzaria">
-    <meta name="description" content="A family friendly pizzaria">
+    <title>Okotoks Family Pizza Restaurant</title>
+    <link rel="stylesheet" href="css/style.css" type="Text/css">
+    <meta name="keywords" content="pizza, restaurant, okotoks, delivery, topping, familyrestaurant, alberta, pizzaria, ">
+    <meta name="description" content='A family owned Pizzaria with a passion for flavour and good ingredients'>
     <meta name="author" content="John Doe">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Raleway:300&display=swap" rel="stylesheet">
+    <link rel=“shortcut icon” type=“ png ” src=“icon.png”/>
+
 </head>
 
 <body>
-    <section id="direction_bar">
-        <a class="a_tags" href="Pages/menu.html">Menu</a>
-        <a class="a_tags" href="Pages/about-us.html">About us</a>
-    </section>
-
-    <section id="content">
-        <br>
-        <article id="logo_video">
-            <div><img src="Images/okotoks-pizza-logo.png" alt="okotoks-pizza-logo"></div>
-            <div><iframe src="https://www.youtube.com/embed/xbHbcmQIcAQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <Section id="Grid-container">
+        <section id="Header-container">
+            <div><img id="Logo-link" src="Images/okotoks-pizza-logo.png" alt=""></div>
+            <div id="Empty-div"></div>
+            <div><a id="Menu-link" href="Pages/Menu.html">Menu</a></div>
+            <div><a id="About-us-link" href="Pages/About Us.html">About Us</a></div>
+            <div><a class="Phonenumber-class" id="Phonenumber-link" href="403-555-5555">Call us on 403-555-5555</a>
+                <p id="Phonenumber-text">Call us on 403-555-5555</p>
             </div>
-        </article>
-        <article id="reviews">
-            <a id="review_link" href="https://www.yelp.ca/biz/pizzaberg-cafe-okotoks" target="_blank">See our reviews here!</a>
-            <p>We also make deepdish Pizzas</p>
-            <br>
-        </article>
-        <article id="audio"><audio controls>
-                <source src="Audio files/file_example_WAV_1MG.wav" type="audio/wav">
-                Your browser does not support the audio tag.
-            </audio>
-            <p>You can listen to our podcast here</p>
-        </article>
-    </section>
-    <section id="footer">
-        <a class="footer_links" href="tel:4035555555">Call Us Now On 403-555-5555</a>
-        <p>Or</p>
-        <a class="footer_links" href="mailto:me@james-allen.ca">Email Us Here</a>
-    </section>
+        </section>
+        <section id="Content-container">
+            <div id="Hungry-banner">
+                <div id="Hungry-text">
+                    <div><a id="Hungry-question" href="Pages/Menu.html">Hungry?</a></div>
+                    <p class="Hungry-answer">We have the pizzas you need! </p><a class="Hungry-answer" href="https://www.google.com/maps/place/100+Milligan+Dr,+Okotoks,+AB+T1S+1C5/@50.7301203,-113.970546,13.71z/data=!4m5!3m4!1s0x537199c83600fd4b:0x2d1e482c144aea7f!8m2!3d50.7325974!4d-113.9667266"
+                        target="_blank">
+                     Located on 100 Milligan Dr in Okotoks, </a>
+                    <p class="Hungry-answer">we are always close with the best Pizza.</p>
+                </div>
+            </div>
+            <p id="Homepage-text">There are no short cuts when it comes to our passion. We pull out all the stops, giving you the ‘wow’ flavour, experience and consistency you not only want, but deserve. Our customers keep coming back, again, again, and again.</p>
+            <div id="Tossing-pizza-container"><img id="Tossing-pizza" src="Images/tossing-pizza-dough.jpg" alt="Okotoks pizza being made"></div>
+            <div>
+                <p id="Opening-hours">Open 7 days a week 2pm to 10pm</p>
+            </div>
+        </section>
+        <section id="Footer-container">
+            <div id="Left-footer-column">
+                <p>© Okotoks Pizza - 2019</p>
+
+            </div>
+            <div id="Right-footer-column">
+                <p>Open 7 days a week 2pm to 10pm </p>
+                <p>100 Milligan dr, Okotoks</p>
+                <p>403-555-5555</p>
+            </div>
+            <section>
+            </Section>
+
+
 </body>
 
 </html>
