--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="pizza, restaurant, okotoks, delivery, cheese, sauce, topping, deepdish, familyrestaurant, alberta, pizzaria">
     <meta name="description" content='Okotoks Pizza Menu'>
     <meta name="author" content="John Doe">
-    <link rel="shortcut icon" href="../Images/favicon.svg" type="image/svg">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Raleway:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" type="text/css">
+    <link rel="shortcut icon" type="icon" href="../Images/favicon.ico" />
 </head>
 
 <body>
@@ -23,16 +23,18 @@
             <div id="Empty-div"></div>
             <div><a class="Active-link" id="Menu-link" href="Menu.html">Menu</a></div>
             <div><a id="About-us-link" href="About Us.html">About Us</a></div>
-            <div><a class="Phonenumber-class" id="Phonenumber-link" href="403-555-5555">Call us on 403-555-5555</a>
+            <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us on 403-555-5555</a>
                 <p id="Phonenumber-text">Call us on 403-555-5555</p>
             </div>
         </section>
         <section id="Pizza-menu">
             <div class="Menu-headers">Our Pizzas</div>
             <article class="Menu-grid">
-                <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="Margarita pizza">
+                <div Class="Pizza-item-container">
                     <p class="Menu-header">MARGHERITA</p>
                     <span><p class="Menu-prices">$24</p></span>
+                    <img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="Margarita pizza">
+                    <p class="Buy-now-button">Buy Now</p>
                     <p class="Menu-text">marinated tomato, pesto, bocconcini, mozza, pizza sauce, balsamic glaze</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-2.jpg" alt="True North Pizza">
