--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content='A family owned Pizzaria with a passion for flavour and good ingredients'>
     <meta name="author" content="John Doe">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Raleway:300&display=swap" rel="stylesheet">
-    <link rel=“shortcut icon” type=“ png ” src=“icon.png”/>
+    <link rel="shortcut icon" type="icon" href="Images/favicon.ico" />
 
 </head>
 
@@ -22,25 +22,24 @@
             <div id="Empty-div"></div>
             <div><a id="Menu-link" href="Pages/Menu.html">Menu</a></div>
             <div><a id="About-us-link" href="Pages/About Us.html">About Us</a></div>
-            <div><a class="Phonenumber-class" id="Phonenumber-link" href="403-555-5555">Call us on 403-555-5555</a>
+            <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us on 403-555-5555</a>
                 <p id="Phonenumber-text">Call us on 403-555-5555</p>
             </div>
         </section>
         <section id="Content-container">
             <div id="Hungry-banner">
                 <div id="Hungry-text">
-                    <div><a id="Hungry-question" href="Pages/Menu.html">Hungry?</a></div>
-                    <p class="Hungry-answer">We have the pizzas you need! </p><a class="Hungry-answer" href="https://www.google.com/maps/place/100+Milligan+Dr,+Okotoks,+AB+T1S+1C5/@50.7301203,-113.970546,13.71z/data=!4m5!3m4!1s0x537199c83600fd4b:0x2d1e482c144aea7f!8m2!3d50.7325974!4d-113.9667266"
-                        target="_blank">
-                     Located on 100 Milligan Dr in Okotoks, </a>
-                    <p class="Hungry-answer">we are always close with the best Pizza.</p>
+                    <div><a id="Hungry-question" href="Pages/Menu.html">Hungry for pizza?</a></div>
+                    <p class="Hungry-answer">We have what you need! </p><a class="Hungry-answer" href="Pages/Menu.html">
+                     See our menu here,</a>
+                    <p class="Hungry-answer"> and find your favourites.</p>
                 </div>
             </div>
-            <p id="Homepage-text">There are no short cuts when it comes to our passion. We pull out all the stops, giving you the ‘wow’ flavour, experience and consistency you not only want, but deserve. Our customers keep coming back, again, again, and again.</p>
-            <div id="Tossing-pizza-container"><img id="Tossing-pizza" src="Images/tossing-pizza-dough.jpg" alt="Okotoks pizza being made"></div>
             <div>
                 <p id="Opening-hours">Open 7 days a week 2pm to 10pm</p>
             </div>
+            <p id="Homepage-text">There are no short cuts when it comes to our passion. We pull out all the stops, giving you the ‘wow’ flavour, experience and consistency you not only want, but deserve. Our customers keep coming back, again, again, and again.</p>
+            <div id="Tossing-pizza-container"><img id="Tossing-pizza" src="Images/tossing-pizza-dough.jpg" alt="Okotoks pizza being made"></div>
         </section>
         <section id="Footer-container">
             <div id="Left-footer-column">
