--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -31,74 +31,86 @@
             <div class="Menu-headers">Our Pizzas</div>
             <article class="Menu-grid">
                 <div Class="Pizza-item-container">
+                    <img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="Margarita pizza">
                     <p class="Menu-header">MARGHERITA</p>
                     <span><p class="Menu-prices">$24</p></span>
-                    <img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="Margarita pizza">
-                    <p class="Buy-now-button">Buy Now</p>
-                    <p class="Menu-text">marinated tomato, pesto, bocconcini, mozza, pizza sauce, balsamic glaze</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Marinated tomato, pesto, bocconcini, mozza, pizza sauce, balsamic glaze</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-2.jpg" alt="True North Pizza">
                     <p class="Menu-header">TRUE NORTH</p>
                     <span><p class="Menu-prices">$23</p></span>
-                    <p class="Menu-text">double pepperoni, maple soaked, bacon, pizza sauce, mozza</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Double pepperoni, maple soaked, bacon, pizza sauce, mozza</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-3.jpg" alt="D-lux Pizza">
                     <p class="Menu-header">D-LUX</p>
                     <span><p class="Menu-prices">$22</p></span>
-                    <p class="Menu-text">pepperoni, ham, mushroom, peppers, onion, olive, mozza, pizza sauce</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Pepperoni, ham, mushroom, peppers, onion, olive, mozza, pizza sauce</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-4.jpg" alt="4 Meat Pizza">
                     <p class="Menu-header">4 MEAT</p>
                     <span><p class="Menu-prices">$24</p></span>
-                    <p class="Menu-text">pepperoni, ham, Italian sausage, bacon, mozza, pizza sauce</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Pepperoni, ham, Italian sausage, bacon, mozza, pizza sauce</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-2.jpg" alt="Pazzo Pizza">
                     <p class="Menu-header">PAZZO</p>
                     <span><p class="Menu-prices">$22</p></span>
-                    <p class="Menu-text">italian sausage, onion, jalepeno, fresh arugula, parmesan, chili oil, mozza, pizza sauce</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Italian sausage, onion, jalepeno, fresh arugula, parmesan, chili oil, mozza, pizza sauce</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-5.jpg" alt="">
                     <p class="Menu-header">FUN GUY</p>
                     <span><p class="Menu-prices">$24</p></span>
+                    <p class="Buy-now-button">Buy now</p>
                     <p class="Menu-text">Menu mushrooms, garlic, rosemary, mozza, parmesan, truffle, fresh parsley</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="">
                     <p class="Menu-header">DEWEY</p>
                     <span><p class="Menu-prices">$26</p></span>
-                    <p class="Menu-text">pesto base, mozza, mushroom, arugula, pancetta, onion, bocconcini, chili oil
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Pesto base, mozza, mushroom, arugula, pancetta, onion, bocconcini, chili oil
                     </p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-3.jpg" alt="">
                     <p class="Menu-header">BUDDHA GOUDA</p>
                     <span><p class="Menu-prices">$21</p></span>
-                    <p class="Menu-text">pizza sauce, mozza, mushroom, onion, smoked gouda, black sesame seeds, chili oil
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Pizza sauce, mozza, mushroom, onion, smoked gouda, black sesame seeds, chili oil
                     </p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="">
                     <p class="Menu-header">MEDI</p>
                     <span><p class="Menu-prices">$24</p></span>
-                    <p class="Menu-text">arugula, garlic, peppers, olive, bocconcini, pizza sauce</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Arugula, garlic, peppers, olive, bocconcini, pizza sauce</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-5.jpg" alt="">
                     <p class="Menu-header">MANGO TANGO</p>
                     <span><p class="Menu-prices">$22</p></span>
-                    <p class="Menu-text">pizza sauce, mozza, mushroom, onion, smoked gouda, black sesame seeds, chili oil
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Pizza sauce, mozza, mushroom, onion, smoked gouda, black sesame seeds, chili oil
                     </p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-3.jpg" alt="">
                     <p class="Menu-header">OKOTOKS</p>
                     <span><p class="Menu-prices">$24</p></span>
-                    <p class="Menu-text">marinated tomato, pesto, bocconcini, mozza, pizza sauce, balsamic glaze</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Marinated tomato, pesto, bocconcini, mozza, pizza sauce, balsamic glaze</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-1.jpg" alt="">
                     <p class="Menu-header">FAMILY</p>
                     <span><p class="Menu-prices">$24</p></span>
-                    <p class="Menu-text">pesto base, mozza, chicken, onion, marinated tomato, garlic</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Pesto base, mozza, chicken, onion, marinated tomato, garlic</p>
                 </div>
                 <div Class="Pizza-item-container"><img class="Menu-images" src="../Images/Pizza-menu-4.jpg" alt="">
                     <p class="Menu-header">FLATBREAD</p>
                     <span><p class="Menu-prices">$20</p></span>
-                    <p class="Menu-text">wild mushrooms, garlic, rosemary, mozza, parmesan, truffle, fresh parsley</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Wild mushrooms, garlic, rosemary, mozza, parmesan, truffle, fresh parsley</p>
                 </div>
             </article>
             <div class="Menu-headers">Appetizers</div>
@@ -108,6 +120,7 @@
                     <div>
                         <p class="Menu-prices">$14</p>
                     </div>
+                    <p class="Buy-now-button">Buy now</p>
                     <p class="Menu-text">Assorted Greens, Vine Tomatoes, Oranges, Cucumbers, Fresh Herb Vinaigrette, Shoots
                     </p>
                 </div>
@@ -116,6 +129,7 @@
                     <div>
                         <p class="Menu-prices">$16</p>
                     </div>
+                    <p class="Buy-now-button">Buy now</p>
                     <p class="Menu-text">Assorted Greens, Crimini Mushrooms, Mango, Roasted Red Bell Peppers, Basil & Blackberry Dressing, Shoots</p>
                 </div>
                 <div Class="Menu-item-container">
@@ -123,6 +137,7 @@
                     <div>
                         <p class="Menu-prices">$17</p>
                     </div>
+                    <p class="Buy-now-button">Buy now</p>
                     <p class="Menu-text">Assorted Greens, Cucumbers, Vine Tomatoes, Red Onions, Green Pepper, Goat Cheese, Black Mission Fig Dressing, Shoots</p>
                 </div>
                 <div Class="Menu-item-container">
@@ -130,6 +145,7 @@
                     <div>
                         <p class="Menu-prices">$12</p>
                     </div>
+                    <p class="Buy-now-button">Buy now</p>
                     <p class="Menu-text">Sea Salt & Herb Flatbread, Marinated Vine Tomatoes, Parmesan, Garlic, Onion, Basil, Balsamic Reduction GLUTEN WISE + 3.00</p>
                 </div>
                 <div Class="Menu-item-container">
@@ -137,7 +153,8 @@
                     <div>
                         <p class="Menu-prices">$19</p>
                     </div>
-                    <p class="Menu-text">hot, honey garlic, bbq, red rock chili lime, salt and pepper, lemon herb, cajun
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Hot, honey garlic, bbq, red rock chili lime, salt and pepper, lemon herb, cajun
                     </p>
                 </div>
             </article>
@@ -148,35 +165,40 @@
                     <div>
                         <p class="Menu-prices">14oz - $8</p>
                     </div>
-                    <p class="Menu-text">ten peaks pale ale, railway avenue rye IPA, georgetown brown strong ale, mineside stout, New england style misty mountain hops IPA</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Ten peaks pale ale, railway avenue rye IPA, georgetown brown, mineside stout, Misty mountain hops IPA</p>
                 </div>
                 <div Class="Menu-item-container">
                     <p class="Menu-header">FEATURED CIDER</p>
                     <Div>
                         <p class="Menu-prices">$7</p>
                     </div>
-                    <p class="Menu-text">somersby, big rock, </p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Somersby, big rock, </p>
                 </div>
                 <div Class="Menu-item-container">
                     <p class="Menu-header">CANNED POP</p>
                     <div>
                         <p class="Menu-prices">$3</p>
                     </div>
-                    <p class="Menu-text">coca cola, fanta, sprite, 7up, rootbeer, gingerale</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Coca cola, fanta, sprite, 7up, rootbeer, gingerale</p>
                 </div>
                 <div Class="Menu-item-container">
                     <p class="Menu-header">FEATURED WINES</p>
                     <div>
                         <p class="Menu-prices">6oz - $9 9oz - $12</p>
                     </div>
-                    <p class="Menu-text">malbec, shiraz, pinot noir, merlot</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Malbec, shiraz, pinot noir, merlot</p>
                 </div>
                 <div Class="Menu-item-container">
                     <p class="Menu-header">DOMESTIC BEERS</p>
                     <div>
                         <p class="Menu-prices">$6</p>
                     </div>
-                    <p class="Menu-text">molson, big rock brewery, kokanee lager, drewrys, alexander keiths
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Molson, big rock brewery, kokanee lager, drewrys, alexander keiths
                     </p>
                 </div>
                 <div Class="Menu-item-container">
@@ -184,7 +206,8 @@
                     <div>
                         <p class="Menu-prices">$8</p>
                     </div>
-                    <p class="Menu-text">happy belly kombucha, karma cultures, wild tea kombucha</p>
+                    <p class="Buy-now-button">Buy now</p>
+                    <p class="Menu-text">Happy belly kombucha, karma cultures, wild tea kombucha</p>
                 </div>
             </article>
             </div>
@@ -192,7 +215,7 @@
         <section id="Footer-container">
             <div id="Left-footer-column">
                 <p>© Okotoks Pizza - 2019</p>
-
+                <p>All rights reserved</p>
             </div>
             <div id="Right-footer-column">
                 <p>Open 7 days a week 2pm to 10pm </p>
