--- a/Pages/About Us.html
+++ b/Pages/About Us.html
@@ -27,42 +27,39 @@
                 <p id="Phonenumber-text">Call us on 403-555-5555</p>
             </div>
         </section>
-        <section id="About-us-container">
-            <div id="Header-video-grid">
-                <p id="Page-header">Who are we?</p>
-                <div><video id="Pizza-video" muted controls src="../Videos/Pizza-video.mp4"></video></div>
+        <section id="About-us-container"></section>
+        <p id="Page-header">Who are we?</p>
+        <section id="About-us-grid">
+            <div><img class="About-us-images" id="Pizza-on-table-image" src="../Images/Pizza on table.jpg" alt="Our Margarita, Italiano and 4 meat pizza."></div>
+            <div id="Text-1">
+                <p class="About-us-header">We know what's good</p>
+                <p class="About-us-text">Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes, made-from-scratch sauce and even features premium toppings like Sorriso Pepperoni, salami from Valbella meats and a healthy Flax crust. </p>
+                <P class="About-us-text" id="About-us-italics">You feel good about ordering it. You feel good about eating it. And you feel even better knowing we're always ready to make you more.</p>
             </div>
-            <section id="About-us-grid">
-                <div><img class="About-us-images" id="Pizza-on-table-image" src="../Images/Pizza on table.jpg" alt="Our Margarita, Italiano and 4 meat pizza."></div>
-                <div id="Text-1">
-                    <p class="About-us-header">We know what's good</p>
-                    <p class="About-us-text">Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes, made-from-scratch sauce and even features premium toppings like Sorriso Pepperoni, salami from Valbella meats and a healthy Flax crust. </p>
-                    <P class="About-us-text" id="About-us-italics">You feel good about ordering it. You feel good about eating it. And you feel even better knowing we're always ready to make you more.</p>
-                </div>
-                <div id="Text-2">
-                    <p class="About-us-header">Who are we</p>
-                    <p class="About-us-text">We’re a small but nimble family-run take out and delivery pizza shop in Okotoks, Alberta. When we’re not scouring the globe (okay, the prairies) for the freshest, ripest and boldest ingredients, we’re crafting perfect pizzas for you
-                        and your family to enjoy. From hot Hawaiians and classic Canadians to crispy wings, everything at Okotoks Pizza is baked with love.</p>
-                </div>
-                <div><img class="About-us-images" id="Who-are-we-image" src="../Images/Family owned restaurant.jpg" alt="Our family at Okotoks pizza restaurant"></div>
-            </section>
-        </section>
-        <section id="Location">
-            <p id="Location-header">Location</p>
-            <div><iframe id="Maps-location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2525.3174514420552!2d-113.96892064903332!3d50.73260077477514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537199c83600fd4b%3A0x2d1e482c144aea7f!2s100%20Milligan%20Dr%2C%20Okotoks%2C%20AB%20T1S%201C5!5e0!3m2!1sda!2sca!4v1574459920580!5m2!1sda!2sca"
-                    target="_blank" frameborder="0"></iframe></div>
-        </section>
-
-        <section id="Footer-container">
-            <div id="Left-footer-column">
-                <p>© Okotoks Pizza - 2019</p>
-
+            <div id="Text-2">
+                <p class="About-us-header">Who are we</p>
+                <p class="About-us-text">We’re a small but nimble family-run take out and delivery pizza shop in Okotoks, Alberta. When we’re not scouring the globe (okay, the prairies) for the freshest, ripest and boldest ingredients, we’re crafting perfect pizzas for you and
+                    your family to enjoy. From hot Hawaiians and classic Canadians to crispy wings, everything at Okotoks Pizza is baked with love.</p>
             </div>
-            <div id="Right-footer-column">
-                <p>Open 7 days a week 2pm to 10pm </p>
-                <p>100 Milligan dr, Okotoks</p>
-                <p>403-555-5555</p>
+            <div><img class="About-us-images" id="Who-are-we-image" src="../Images/Family owned restaurant.jpg" alt="Our family at Okotoks pizza restaurant"></div>
         </section>
+    </section>
+    <section id="Location">
+        <p id="Location-header">Location</p>
+        <div><iframe id="Maps-location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2525.3174514420552!2d-113.96892064903332!3d50.73260077477514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537199c83600fd4b%3A0x2d1e482c144aea7f!2s100%20Milligan%20Dr%2C%20Okotoks%2C%20AB%20T1S%201C5!5e0!3m2!1sda!2sca!4v1574459920580!5m2!1sda!2sca"
+                target="_blank" frameborder="0"></iframe></div>
+    </section>
+
+    <section id="Footer-container">
+        <div id="Left-footer-column">
+            <p>© Okotoks Pizza - 2019</p>
+            <p>All rights reserved</p>
+        </div>
+        <div id="Right-footer-column">
+            <p>Open 7 days a week 2pm to 10pm </p>
+            <p>100 Milligan dr, Okotoks</p>
+            <p>403-555-5555</p>
+    </section>
     </section>
 
 </body>
