--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="Hungry-banner">
                 <div id="Hungry-text">
                     <div><a id="Hungry-question" href="Pages/Menu.html">Hungry for pizza?</a></div>
-                    <p class="Hungry-answer">We have what you need! </p><a class="Hungry-answer" href="Pages/Menu.html">
+                    <a class="Hungry-answer" href="Pages/Menu.html">
                      See our menu here,</a>
                     <p class="Hungry-answer"> and find your favourites.</p>
                 </div>
@@ -39,11 +39,12 @@
                 <p id="Opening-hours">Open 7 days a week 2pm to 10pm</p>
             </div>
             <p id="Homepage-text">There are no short cuts when it comes to our passion. We pull out all the stops, giving you the ‘wow’ flavour, experience and consistency you not only want, but deserve. Our customers keep coming back, again, again, and again.</p>
-            <div id="Tossing-pizza-container"><img id="Tossing-pizza" src="Images/tossing-pizza-dough.jpg" alt="Okotoks pizza being made"></div>
+            <div id="Video-container"><video id="Pizza-video" muted autoplay loop src="../Videos/Pizza-video.mp4"></video></div>
         </section>
         <section id="Footer-container">
             <div id="Left-footer-column">
                 <p>© Okotoks Pizza - 2019</p>
+                <p>All rights reserved</p>
 
             </div>
             <div id="Right-footer-column">
