--- a/Pages/About Us.html
+++ b/Pages/About Us.html
@@ -11,20 +11,20 @@
     <meta name="author" content="John Doe">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Raleway:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" type="text/css">
-    <link rel="shortcut icon" type="icon" href="../Images/favicon.ico" />
+    <link rel="shortcut icon" type="icon" href="Images/pizza favicon.ico" />
 </head>
 
 <body>
     <section id="About-us-page">
         <section id="Header-container">
             <div>
-                <a href="../Index.html"><img id="Logo-link" src="../Images/okotoks-pizza-logo.png" alt="Okotoks Pizza Logo"></a>
+                <a href="../index.html"><img id="Logo-link" src="../Images/okotoks-pizza-logo.png" alt="Okotoks Pizza Logo"></a>
             </div>
             <div id="Empty-div"></div>
             <div><a id="Menu-link" href="Menu.html">Menu</a></div>
             <div><a class="Active-link" id="About-us-link" href="About Us.html">About Us</a></div>
             <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us on 403-555-5555</a>
-                <p id="Phonenumber-text">Call us on 403-555-5555</p>
+                <p id="Phonenumber-text">Call us: 403-555-5555</p>
             </div>
         </section>
         <section id="About-us-container"></section>
