--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -11,23 +11,29 @@
     <meta name="author" content="John Doe">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Raleway:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" type="text/css">
-    <link rel="shortcut icon" type="icon" href="../Images/favicon.ico" />
+    <link rel="shortcut icon" type="icon" href="Images/pizza favicon.ico" />
 </head>
 
 <body>
     <section id="Grid-container">
         <section id="Header-container">
             <div>
-                <a href="../Index.html"><img id="Logo-link" src="../Images/okotoks-pizza-logo.png" alt="Okotoks Pizza Logo"></a>
+                <a href="../index.html"><img id="Logo-link" src="../Images/okotoks-pizza-logo.png" alt="Okotoks Pizza Logo"></a>
             </div>
             <div id="Empty-div"></div>
             <div><a class="Active-link" id="Menu-link" href="Menu.html">Menu</a></div>
             <div><a id="About-us-link" href="About Us.html">About Us</a></div>
             <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us on 403-555-5555</a>
-                <p id="Phonenumber-text">Call us on 403-555-5555</p>
+                <p id="Phonenumber-text">Call us: 403-555-5555</p>
             </div>
+            <section id="Menu-header-grid">
+                <div><a href="#Pizza-header">Pizzas</a></div>
+                <div><a href="#Appetizer-header">Appys</a></div>
+                <div><a href="#Drinks-header">Drinks</a></div>
+            </section>
         </section>
         <section id="Pizza-menu">
+            <div class="Link-to-menu-headers" id="Pizza-header"></div>
             <div class="Menu-headers">Our Pizzas</div>
             <article class="Menu-grid">
                 <div Class="Pizza-item-container">
@@ -113,6 +119,7 @@
                     <p class="Menu-text">Wild mushrooms, garlic, rosemary, mozza, parmesan, truffle, fresh parsley</p>
                 </div>
             </article>
+            <div class="Link-to-menu-headers" id="Appetizer-header"></div>
             <div class="Menu-headers">Appetizers</div>
             <article class="Menu-grid">
                 <div Class="Menu-item-container">
@@ -125,7 +132,7 @@
                     </p>
                 </div>
                 <div Class="Menu-item-container">
-                    <p class="Menu-header">BASIL & BLACKBERRY SALAD</p>
+                    <p class="Menu-header">BASIL & BERRY SALAD</p>
                     <div>
                         <p class="Menu-prices">$16</p>
                     </div>
@@ -158,6 +165,7 @@
                     </p>
                 </div>
             </article>
+            <div class="Link-to-menu-headers" id="Drinks-header"></div>
             <div class="Menu-headers">Drinks</div>
             <article class="Menu-grid">
                 <div Class="Menu-item-container">
@@ -210,7 +218,6 @@
                     <p class="Menu-text">Happy belly kombucha, karma cultures, wild tea kombucha</p>
                 </div>
             </article>
-            </div>
         </section>
         <section id="Footer-container">
             <div id="Left-footer-column">
