--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content='A family owned Pizzaria with a passion for flavour and good ingredients'>
     <meta name="author" content="John Doe">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Raleway:300&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="icon" href="Images/favicon.ico" />
+    <link rel="shortcut icon" type="icon" href="Images/pizza favicon.ico" />
 
 </head>
 
@@ -23,7 +23,7 @@
             <div><a id="Menu-link" href="Pages/Menu.html">Menu</a></div>
             <div><a id="About-us-link" href="Pages/About Us.html">About Us</a></div>
             <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us on 403-555-5555</a>
-                <p id="Phonenumber-text">Call us on 403-555-5555</p>
+                <p id="Phonenumber-text">Call us: 403-555-5555</p>
             </div>
         </section>
         <section id="Content-container">
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div>
-                <p id="Opening-hours">Open 7 days a week 2pm to 10pm</p>
+                <p id="Opening-hours"> Okotoks Pizza is always open 2pm to 10pm</p>
             </div>
             <p id="Homepage-text">There are no short cuts when it comes to our passion. We pull out all the stops, giving you the ‘wow’ flavour, experience and consistency you not only want, but deserve. Our customers keep coming back, again, again, and again.</p>
             <div id="Video-container"><video id="Pizza-video" muted autoplay loop src="../Videos/Pizza-video.mp4"></video></div>
