--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div id="Empty-div"></div>
             <div><a id="Menu-link" href="Pages/Menu.html">Menu</a></div>
             <div><a id="About-us-link" href="Pages/About Us.html">About Us</a></div>
-            <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us on 403-555-5555</a>
-                <p id="Phonenumber-text">Call us: 403-555-5555</p>
+            <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us 403-555-5555</a>
+                <p id="Phonenumber-text">Call us 403-555-5555</p>
             </div>
         </section>
         <section id="Content-container">
