--- a/Pages/About Us.html
+++ b/Pages/About Us.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Okotoks Pizza Restaurant - About us</title>
-    <meta name="keywords" content="pizza, about us, location, restaurant, okotoks, delivery, topping, familyrestaurant, alberta, pizzaria, contact,">
-    <meta name="description" content="The story behind our family-owned webiste">
+    <meta name="keywords" content="pizza, about us, location, restaurant, okotoks, delivery, familyrestaurant, alberta, pizzaria, contact,">
+    <meta name="description" content="The story and location of Okotoks Pizza">
     <meta name="author" content="John Doe">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Raleway:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" type="text/css">
@@ -17,49 +17,64 @@
 <body>
     <section id="About-us-page">
         <section id="Header-container">
-            <div>
+            <div class="Link-background">
                 <a href="../index.html"><img id="Logo-link" src="../Images/okotoks-pizza-logo.png" alt="Okotoks Pizza Logo"></a>
             </div>
             <div id="Empty-div"></div>
-            <div><a id="Menu-link" href="Menu.html">Menu</a></div>
-            <div><a class="Active-link" id="About-us-link" href="About Us.html">About Us</a></div>
-            <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us on 403-555-5555</a>
-                <p id="Phonenumber-text">Call us: 403-555-5555</p>
+            <div id="Link-grid-1">
+                <div><a id="Menu-link" href="Menu.html">Menu</a></div>
+                <div class="border-div"></div>
+            </div>
+            <div><a class="Active-link" id="About-us-link" href="About Us.html">About Us</a>
+                <div class="border-div"></div>
+            </div>
+            <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us 403-555-5555</a>
+                <p id="Phonenumber-text">Call us 403-555-5555</p>
             </div>
         </section>
-        <section id="About-us-container"></section>
-        <p id="Page-header">Who are we?</p>
-        <section id="About-us-grid">
-            <div><img class="About-us-images" id="Pizza-on-table-image" src="../Images/Pizza on table.jpg" alt="Our Margarita, Italiano and 4 meat pizza."></div>
-            <div id="Text-1">
-                <p class="About-us-header">We know what's good</p>
-                <p class="About-us-text">Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes, made-from-scratch sauce and even features premium toppings like Sorriso Pepperoni, salami from Valbella meats and a healthy Flax crust. </p>
-                <P class="About-us-text" id="About-us-italics">You feel good about ordering it. You feel good about eating it. And you feel even better knowing we're always ready to make you more.</p>
-            </div>
-            <div id="Text-2">
-                <p class="About-us-header">Who are we</p>
-                <p class="About-us-text">We’re a small but nimble family-run take out and delivery pizza shop in Okotoks, Alberta. When we’re not scouring the globe (okay, the prairies) for the freshest, ripest and boldest ingredients, we’re crafting perfect pizzas for you and
-                    your family to enjoy. From hot Hawaiians and classic Canadians to crispy wings, everything at Okotoks Pizza is baked with love.</p>
-            </div>
-            <div><img class="About-us-images" id="Who-are-we-image" src="../Images/Family owned restaurant.jpg" alt="Our family at Okotoks pizza restaurant"></div>
+        <section id="About-us-container">
+            <p id="Page-header">Who are we?</p>
+            <section id="About-us">
+                <div id="About-us-grid">
+                    <div><img class="About-us-images" id="Pizza-on-table-image" src="../Images/Pizza on table.jpg" alt="Our Margarita, Italiano and 4 meat pizza."></div>
+                    <div id="Text-1">
+                        <p class="About-us-header">We know what's good</p>
+                        <p class="About-us-text">Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes, made-from-scratch sauce and even features premium toppings like Sorriso Pepperoni, salami from Valbella meats and a healthy Flax crust.</p>
+                        <P class="About-us-text" id="About-us-italics">You feel good about ordering it. You feel good about eating it. And you feel even better knowing we're always ready to make you more.</p>
+                    </div>
+                    <div id="Text-2">
+                        <p class="About-us-header">Who are we</p>
+                        <p class="About-us-text">We’re a small but nimble family-run take out and delivery pizza shop in Okotoks, Alberta. When we’re not scouring the globe (okay, the prairies) for the freshest, ripest and boldest ingredients, we’re crafting perfect pizzas for
+                            you and your family to enjoy. After watching his parents run a very successful pizza business in Calgary, Matt Cleveland learned how to make people happy, one topping at a time. From hot Hawaiians and classic Canadians to crispy
+                            wings, everything at Okotoks Pizza is baked with love.</p>
+                    </div>
+                    <div><img class="About-us-images" id="Who-are-we-image" src="../Images/Family owned restaurant.jpg" alt="Our family at Okotoks pizza restaurant"></div>
+                </div>
+                <div id="About-us-grid-2">
+                    <div><img id="Chefs-hat-image" src="../Images/chefs hat.png" alt="Chefs hat icon"></div>
+                    <div>
+                        <p class="About-us-text">After watching his parents run a very successful pizza business in Calgary, Matt Cleveland learned how to make people happy, one topping at a time. Opening the doors to Okotoks Pizza in 2004, Matt has managed to evolve the fresh,
+                            traditional Greek-style pizza his family perfected back in the mid 80s to a more modern and convenient comfort food for today’s family on the go.</p>
+                    </div>
+                </div>
+            </section>
+            <section id="Location">
+                <p id="Location-header">Location</p>
+                <div><iframe id="Maps-location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2525.3174514420552!2d-113.96892064903332!3d50.73260077477514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537199c83600fd4b%3A0x2d1e482c144aea7f!2s100%20Milligan%20Dr%2C%20Okotoks%2C%20AB%20T1S%201C5!5e0!3m2!1sda!2sca!4v1574459920580!5m2!1sda!2sca"
+                        target="_blank" frameborder="0"></iframe></div>
+            </section>
         </section>
-    </section>
-    <section id="Location">
-        <p id="Location-header">Location</p>
-        <div><iframe id="Maps-location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2525.3174514420552!2d-113.96892064903332!3d50.73260077477514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537199c83600fd4b%3A0x2d1e482c144aea7f!2s100%20Milligan%20Dr%2C%20Okotoks%2C%20AB%20T1S%201C5!5e0!3m2!1sda!2sca!4v1574459920580!5m2!1sda!2sca"
-                target="_blank" frameborder="0"></iframe></div>
-    </section>
 
-    <section id="Footer-container">
-        <div id="Left-footer-column">
-            <p>© Okotoks Pizza - 2019</p>
-            <p>All rights reserved</p>
-        </div>
-        <div id="Right-footer-column">
-            <p>Open 7 days a week 2pm to 10pm </p>
-            <p>100 Milligan dr, Okotoks</p>
-            <p>403-555-5555</p>
-    </section>
+        <section id="Footer-container">
+            <div id="Left-footer-column">
+                <p>© Okotoks Pizza - 2019</p>
+                <p>All rights reserved</p>
+            </div>
+            <div id="Right-footer-column">
+                <p>Open 7 days a week 2pm to 10pm </p>
+                <p>100 Milligan dr, Okotoks</p>
+                <p>403-555-5555</p>
+        </section>
     </section>
 
 </body>
