--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -21,10 +21,15 @@
                 <a href="../index.html"><img id="Logo-link" src="../Images/okotoks-pizza-logo.png" alt="Okotoks Pizza Logo"></a>
             </div>
             <div id="Empty-div"></div>
-            <div><a class="Active-link" id="Menu-link" href="Menu.html">Menu</a></div>
-            <div><a id="About-us-link" href="About Us.html">About Us</a></div>
-            <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us on 403-555-5555</a>
-                <p id="Phonenumber-text">Call us: 403-555-5555</p>
+            <div>
+                <div><a class="Active-link" id="Menu-link" href="Menu.html">Menu</a></div>
+                <div class="border-div"></div>
+            </div>
+            <div id="Link-grid-2"><a id="About-us-link" href="About Us.html">About Us</a>
+                <div class="border-div"></div>
+            </div>
+            <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us 403-555-5555</a>
+                <p id="Phonenumber-text">Call us 403-555-5555</p>
             </div>
             <section id="Menu-header-grid">
                 <div><a href="#Pizza-header">Pizzas</a></div>
