--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
 <body>
     <Section id="Grid-container">
         <section id="Header-container">
-            <div><img id="Logo-link" src="Images/okotoks-pizza-logo.png" alt=""></div>
+            <div>
+                <a href="../index.html"><img id="Logo-link" src="../Images/okotoks-pizza-logo.png" alt="Okotoks Pizza Logo"></a>
+            </div>
             <div id="Empty-div"></div>
-            <div><a id="Menu-link" href="Pages/Menu.html">Menu</a></div>
-            <div><a id="About-us-link" href="Pages/About Us.html">About Us</a></div>
+            <div id="Link-grid-1">
+                <div><a id="Menu-link" href="Pages/Menu.html">Menu</a></div>
+                <div class="border-div"></div>
+            </div>
+            <div id="Link-grid-2"><a id="About-us-link" href="Pages/About Us.html">About Us</a>
+                <div class="border-div"></div>
+            </div>
             <div><a class="Phonenumber-class" id="Phonenumber-link" href="tel:403-555-5555">Call us 403-555-5555</a>
                 <p id="Phonenumber-text">Call us 403-555-5555</p>
             </div>
